syntax = "proto3";
 
package listbooks;
 
option go_package = "github.com/srijilv/go-api-template.git/pkg/interfaces/grpc/list_books;listbooks";
 
import "api/grpc/books-common.proto";
 
message ListBooksRequest {
    int32 page = 1;
    int32 limit = 2;
}
  
message ListBooksPayload {
    int32 id = 1;
    string title = 2;
    string author = 3;
    string genre = 4;
    int32 published_year = 5;
    string isbn = 6;
    float price = 7;
    string status = 8;
}
  
message ListBooksResponse {
    bookscommon.Information info = 1;
    repeated ListBooksPayload payload = 2;
}

